--- a/app/src/main/res/drawable/button_shape.xml
+++ b/app/src/main/res/drawable/button_shape.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle"
+    android:shape="rectangle">
 
-    >
-
-    <solid android:color="@color/white"/>
-    <corners android:radius="20dp"/>
+    <solid android:color="@color/purple_500" />
+    <corners android:radius="20dp" />
+    <stroke
+        android:width="2dp"
+        android:color="#7E000000"
+        android:dashWidth="3dp" />
 
 
 </shape>
