--- a/app/src/main/res/layout/news.xml
+++ b/app/src/main/res/layout/news.xml
@@ -118,7 +118,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:background="@drawable/button_shape"
-
+            app:backgroundTint="@color/purple_500"
             android:text="read more"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
